roles/openshift-apps/monitor-gating/templates/dashboard_service.yml
apiVersion: v1
kind: Service
metadata:
  name: monitor-dashboard
  labels:
    app: monitor-dashboard
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: grafana-tls
spec:
  selector:
    app: monitor-dashboard
  ports:
  - name: web
    port: 8443
    targetPort: 8443
