roles/openshift-apps/monitor-gating/templates/dashboard_route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: monitor-dashboard
  labels:
    app: monitor-dashboard
spec:
  #host: waiverdb.stg.fedoraproject.org
  port:
    targetPort: web
  to:
    kind: Service
    name: monitor-dashboard
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
